logs/rqt_safeguard/build.check.004.log.stderr
Traceback (most recent call last):
  File "/opt/ros/kinetic/share/catkin/cmake/interrogate_setup_dot_py.py", line 253, in <module>
    main()
  File "/opt/ros/kinetic/share/catkin/cmake/interrogate_setup_dot_py.py", line 244, in main
    runpy.run_path(args.setupfile_path)
  File "/usr/lib/python2.7/runpy.py", line 251, in run_path
    code = _get_code_from_file(path_name)
  File "/usr/lib/python2.7/runpy.py", line 232, in _get_code_from_file
    code = compile(f.read(), fname, 'exec')
  File "/home/mohammadreza/Documents/CMU-Project/RED/catkin_ws/src/rqt_safeguard/setup.py", line 11
    install(PROGRAMS rqt_safeguard
                                 ^
SyntaxError: invalid syntax
[31m[1mCMake Error[0m at /opt/ros/kinetic/share/catkin/cmake/safe_execute_process.cmake:11 (message):

  execute_process(/home/mohammadreza/Documents/CMU-Project/RED/catkin_ws/build/rqt_safeguard/catkin_generated/env_cached.sh
  "/usr/bin/python"
  "/opt/ros/kinetic/share/catkin/cmake/interrogate_setup_dot_py.py"
  "rqt_safeguard"
  "/home/mohammadreza/Documents/CMU-Project/RED/catkin_ws/src/rqt_safeguard/setup.py"
  "/home/mohammadreza/Documents/CMU-Project/RED/catkin_ws/build/rqt_safeguard/catkin_generated/setup_py_interrogation.cmake")
  returned error code 1
[36mCall Stack (most recent call first):[0m
  /opt/ros/kinetic/share/catkin/cmake/catkin_python_setup.cmake:69 (safe_execute_process)
  CMakeLists.txt:20 (catkin_python_setup)


make: *** [cmake_check_build_system] Error 1
